test/syntax/fail/redeclaration_of_global.sync
let node f () = true
let node f () = true
